# focus-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: notification_voice.py
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: quotes.json
src-tauri/src/: main.rs  quotes.rs  timer.rs  todo.rs
src/components/: MotivationPanel.vue  PomodoroTimer.vue  TodoList.vue
