[package]
name = "focus-app"
version = "0.1.0"
description = "A productivity app to help you focus"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
tauri-plugin-shell = "2.0.0"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
